@@ -1,0 +1,29 @@
+<?xml version='1.0'?>
+<!--Example of a testDescriptor-->
+<TestDescriptor>
+
+	<Name>Object container test (with namespace)</Name>
+    <Author>Werner Guttmann</Author>
+	<Comment>
+        This test check the object container code. It will check:
+                - basic container for elements and attributes
+                - container object in container object
+                - namespaces
+    </Comment>
+
+	<Category>basic capability</Category>
+
+	<MarshallingTest>
+
+		<Root_Object random="false" dump="true">ServiceResponse</Root_Object>
+        
+		<UnitTestCase>
+            <Name>Simple Test</Name>
+			<Mapping_File>mapping.xml</Mapping_File>
+			<Input>input.xml</Input>
+			<!--  <ObjectBuilder>Builder</ObjectBuilder> -->
+			<GoldFile>input.xml</GoldFile>
+		</UnitTestCase>
+
+	</MarshallingTest>
+</TestDescriptor>
